# TFrac

./: CMakeLists.txt  TFrac.h  main.cpp
test/: CMakeLists.txt  test.cpp  testEditor.cpp
